feat: Vercel 배포 최적화 및 빌드 오류 수정
- vercel.json 추가 (Cron 설정 포함)
- generateStaticParams에 dynamicParams 추가
- MDX 컴포넌트 타입 호환성 수정
- Next.js 빌드 최적화 설정 추가
- README에 Vercel 배포 가이드 추가
- GitHub Actions 커밋 로직 개선

--- a/.github/workflows/organic-writer.yml
+++ b/.github/workflows/organic-writer.yml
@@ -36,8 +36,10 @@ jobs:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: npm run generate
 
-      - name: Push changes
+      - name: Commit and push changes
         run: |
+          git add -A
+          git diff --staged --quiet || git commit -m "Auto-generated blog post [skip ci]"
           git push || echo "No changes to push"
 
 
