fix: Vercel 배포 환경 대응 - 파일 시스템 쓰기 제한 처리 및 관리자 API 최적화

--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,10 @@
     },
     "app/api/**/*.tsx": {
       "maxDuration": 10
+    },
+    "app/api/admin/**/*.ts": {
+      "maxDuration": 30,
+      "memory": 1024
     }
   }
 }
