Phase 1-4 개발 완료: 유틸리티 4개, 가이드 11개 추가

--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,10 @@
     "app/api/admin/**/*.ts": {
       "maxDuration": 30,
       "memory": 1024
+    },
+    "app/api/rates/**/*.ts": {
+      "maxDuration": 5,
+      "memory": 128
     }
   }
 }
