--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "growth-engine-starter-kit",
+  "name": "donkicalc",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -7,38 +7,46 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate": "tsx scripts/generator.ts"
+    "generate": "tsx scripts/generator.ts",
+    "update-rates": "tsx scripts/update-rates.ts",
+    "seed-guides": "tsx scripts/seed-guide-content.ts",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate"
   },
   "dependencies": {
-    "next": "^14.2.0",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
-    "@next/mdx": "^14.2.0",
+    "@google/generative-ai": "^0.21.0",
+    "@libsql/client": "^0.14.0",
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
-    "@libsql/client": "^0.14.0",
+    "@next/mdx": "^14.2.0",
+    "@tanstack/react-query": "^5.90.11",
     "@vercel/og": "^0.6.0",
-    "date-fns": "^3.6.0",
-    "gray-matter": "^4.0.3",
-    "zod": "^3.23.0",
     "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.0",
+    "date-fns": "^3.6.0",
+    "drizzle-kit": "^0.31.7",
+    "drizzle-orm": "^0.44.7",
+    "gray-matter": "^4.0.3",
+    "lucide-react": "^0.555.0",
+    "next": "^14.2.0",
     "next-mdx-remote": "^5.0.0",
-    "@google/generative-ai": "^0.21.0"
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
+    "tailwind-merge": "^2.2.0",
+    "zod": "^3.23.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20.14.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "typescript": "^5.5.0",
-    "tailwindcss": "^3.4.0",
-    "postcss": "^8.4.0",
     "autoprefixer": "^10.4.0",
-    "@tailwindcss/typography": "^0.5.10",
-    "tsx": "^4.7.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.0",
-    "remark-gfm": "^4.0.0"
+    "postcss": "^8.4.0",
+    "remark-gfm": "^4.0.0",
+    "tailwindcss": "^3.4.0",
+    "tsx": "^4.7.0",
+    "typescript": "^5.5.0"
   }
 }
-
