feat: 배포 상태 확인 및 개선 - GitHub Actions 배포 전 체크 워크플로우 추가 - 환율 갱신 워크플로우에 성공/실패 알림 개선 - 배포 상태 확인 가이드 문서 추가 - README에 CONTACT_EMAIL 필수 환경 변수 명시

--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -35,6 +35,14 @@ jobs:
       - name: Notify on failure
         if: failure()
         run: |
-          echo "환율 갱신 실패. GitHub Actions 로그를 확인하세요."
+          echo "❌ 환율 갱신 실패"
+          echo "GitHub Actions 로그를 확인하세요."
+          echo "환율 API 키 또는 데이터베이스 연결을 확인해주세요."
           exit 1
+
+      - name: Notify on success
+        if: success()
+        run: |
+          echo "✅ 환율 갱신 성공"
+          echo "다음 갱신은 1시간 후에 자동으로 실행됩니다."
 
