feat: Production 배포 워크플로우 개선 - 배포 전 체크 워크플로우 강화 (TypeScript, 빌드, 파일 체크) - 배포 상태 모니터링 워크플로우 추가 - 환율 갱신 성공 메시지 개선 - 상세한 배포 준비 상태 리포트 추가

--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -43,6 +43,12 @@ jobs:
       - name: Notify on success
         if: success()
         run: |
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
           echo "✅ 환율 갱신 성공"
-          echo "다음 갱신은 1시간 후에 자동으로 실행됩니다."
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          echo ""
+          echo "⏰ 다음 갱신: 1시간 후 자동 실행"
+          echo "📊 환율 정보는 /api/rates 엔드포인트에서 확인 가능"
+          echo ""
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
 
