feat: 바이럴 가능한 재미있고 유익한 콘텐츠로 개선 - 메인 페이지에 재미있는 정보 섹션 추가 (돈키호테 쇼핑 꿀팁, 통계 정보) - 결과 페이지에 동적 팁 카드 및 공유 기능 추가 - Guide 콘텐츠를 더 재미있고 실용적으로 개선 (최대 17% 할인 비법 공개) - FAQ 콘텐츠 추가 (실제 사용자 질문 기반, 재미있는 톤) - FAQ 시드 스크립트 추가

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "generate": "tsx scripts/generator.ts",
     "update-rates": "tsx scripts/update-rates.ts",
     "seed-guides": "tsx scripts/seed-guide-content.ts",
+    "seed-faq": "tsx scripts/seed-faq-content.ts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate"
   },
